--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/DanKlaver15/youtube-clone-app#readme",
   "dependencies": {
+    "config": "^3.3.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "joi": "^17.4.0",
     "mongoose": "^5.12.0",
     "nodemon": "^2.0.7"
   }
